--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ googletrans==4.0.0-rc1
 spotipy==2.19.0
 beautifulsoup4==4.10.0
 google==3.0.0
+fuzzywuzzy==0.18.0
+riotwatcher==3.2.5
+PyAudio==0.2.14
